--- a/tests/notebooks/test_merfish_probe_designer.ipynb
+++ b/tests/notebooks/test_merfish_probe_designer.ipynb
@@ -10,7 +10,7 @@
     "import warnings\n",
     "import os\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
-    "from oligo_designer_toolsuite.experiment_specific import MerfishProbeDes"
+    "from oligo_designer_toolsuite.pipelines import MerfishProbeDesigner"
    ]
   },
   {
