--- a/tests/notebooks/test_merfish_readout.ipynb
+++ b/tests/notebooks/test_merfish_readout.ipynb
@@ -2,282 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish'"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "from oligo_designer_toolsuite.oligo_property_filter import (\n",
-    "    PropertyFilter,\n",
-    "    MaskedSequences,\n",
-    "    GCContent,\n",
-    "    MeltingTemperature,\n",
-    "    PadlockArms,\n",
-    "    ConsecutiveRepeats\n",
-    ")\n",
-    "import pandas as pd\n",
+    "import warnings\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "\n",
-    "#sys.path.append(os.path.dirname(os.getcwd()))\n",
-    "ROOT_DIR = \"/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish\"\n",
-    "os.chdir(ROOT_DIR)\n",
     "import yaml\n",
-    "from Bio.SeqUtils import MeltingTemp as mt\n",
-    "os.getcwd()"
+    "from oligo_designer_toolsuite.pipelines import ReadoutProbes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/test_merfish/output'"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "config_file = os.path.join(ROOT_DIR,\"tutorials\",\"configs\",\"merfish_readout_designer_test.yaml\")\n",
-    "config_file\n",
-    "\n",
+    "config_file = \"./configs/merfish_probe_designer_test.yaml\"\n",
+    "# config_file = \"./configs/padlock_probe_designer_ncbi.yaml\" # NCBI config\n",
+    "# config_file = \"./configs/padlock_probe_designer_ensemble.yaml\" # Ensemble config\n",
     "with open(config_file, 'r') as yaml_file:\n",
     "    config = yaml.safe_load(yaml_file)\n",
-    "dir_output = os.path.join(os.getcwd(),\"test_merfish\", config[\"dir_output\"]) # create the complete path for the output directory\n",
-    "dir_output"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "\n",
-    "oligo_database = pd.read_csv('output/output/oligos_creation/oligo_DB_human_GRCh38_NCBI_release_110_transcripts.tsv',sep='\\t')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "# the melting temperature params need to be preprocessed\n",
-    "Tm_params = config[\"Tm_parameters\"][\"shared\"].copy()\n",
-    "Tm_params.update(config[\"Tm_parameters\"][\"property_filter\"])\n",
-    "Tm_params[\"nn_table\"] = getattr(mt, Tm_params[\"nn_table\"])\n",
-    "Tm_params[\"tmm_table\"] = getattr(mt, Tm_params[\"tmm_table\"])\n",
-    "Tm_params[\"imm_table\"] = getattr(mt, Tm_params[\"imm_table\"])\n",
-    "Tm_params[\"de_table\"] = getattr(mt, Tm_params[\"de_table\"])\n",
-    "\n",
-    "Tm_params = config[\"Tm_parameters\"][\"shared\"].copy()\n",
-    "Tm_correction_param = config[\"Tm_correction_parameters\"][\"shared\"].copy()\n",
-    "Tm_correction_param.update(config[\"Tm_correction_parameters\"][\"property_filter\"])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'GC_content_min': 40,\n 'GC_content_max': 60,\n 'Tm_min': 70,\n 'Tm_max': 80,\n 'Repeat_AA_max': 3}"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#property filter for primer\n",
-    "primers_param = config[\"primers_setup\"].copy()\n",
-    "primers_param"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'GC_content_min': 40,\n 'GC_content_max': 60,\n 'Tm_min': 70,\n 'Tm_max': 80,\n 'cross_hybridization_targets_Tm_min': 72,\n 'internal_secondary_structures_Tm_min': 76,\n 'internal_secondary_structures_threshold_deltaG': -9,\n 'max_repeats_AA': 3}"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#property filter for target sequences\n",
-    "target_param = config[\"targets_setup\"].copy()\n",
-    "target_param"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'GC_content_min': 40,\n 'GC_content_max': 60,\n 'Tm_min': 70,\n 'Tm_max': 80,\n 'Repeat_AA_max': 3}"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#property filter for readout sequences\n",
-    "readout_param = config[\"readout_setup\"].copy()\n",
-    "readout_param"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
-   "source": [
-    "# initialize the property filters for primer\n",
-    "\n",
-    "gc_content_primer = GCContent(GC_content_min=primers_param[\"GC_content_min\"], GC_content_max=primers_param[\"GC_content_max\"])\n",
-    "melting_temperature_primer = MeltingTemperature(\n",
-    "    Tm_min=primers_param[\"Tm_min\"],\n",
-    "    Tm_max=primers_param[\"Tm_max\"],\n",
-    "    Tm_parameters=Tm_params,\n",
-    "    Tm_correction_parameters=Tm_correction_param\n",
-    ")\n",
-    "consecutive_repeats = ConsecutiveRepeats(primers_param[\"Repeat_AA_max\"])\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/home/cw/PycharmProjects/output'"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "consecutive_repeats = ConsecutiveRepeats(3)\n",
-    "\n",
-    "\n",
-    "# create the list of filters\n",
-    "filters = [masked_sequences, gc_content, melting_temperature, padlock_arms]\n",
-    "\n",
-    "# initialize the property filter class\n",
-    "property_filter = PropertyFilter(filters=filters)\n",
-    "\n",
-    "# filter the database\n",
-    "oligo_database = property_filter.apply(oligo_database=oligo_database, n_jobs=config[\"n_jobs\"])\n",
-    "# write the intermediate result in a file\n",
-    "if config[\"write_intermediate_steps\"]:\n",
-    "    oligo_database.write_oligos_DB(format=config[\"file_format\"], dir_oligos_DB=\"property_filter\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "dir_output = os.path.join(os.path.dirname(os.getcwd()), config[\"dir_output\"])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from oligo_designer_toolsuite.database import CustomReferenceDB, NcbiReferenceDB, EnsemblReferenceDB\n",
-    "from oligo_designer_toolsuite.oligo_specificity_filter import (\n",
-    "    SpecificityFilter,\n",
-    "    ExactMatches,\n",
-    "    LigationRegionCreation,\n",
-    "    BowtieSeedRegion,\n",
-    "    Blastn,\n",
-    ")\n",
+    "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, EnsemblGenomicRegionGenerator\n",
     "\n",
-    "dir_specificity = os.path.join(dir_output, \"specificity_temporary\") # folder where the temporary files will be written\n",
+    "# If the custom config file is selected\n",
+    "if config[\"source\"] == \"custom\":\n",
+    "    region_generator_custom = CustomGenomicRegionGenerator(\n",
+    "        annotation_file=config[\"annotation_file\"], \n",
+    "        sequence_file=config[\"sequence_file\"], \n",
+    "        files_source=config[\"files_source\"], \n",
+    "        species=config[\"species\"], \n",
+    "        annotation_release=config[\"annotation_release\"], \n",
+    "        genome_assembly=config[\"genome_assembly\"],\n",
+    "        dir_output=dir_output\n",
+    "    )\n",
+    "# If the Ncbi config file is selected\n",
+    "elif config[\"source\"] == \"ncbi\":\n",
+    "    region_generator = NcbiGenomicRegionGenerator(\n",
+    "        taxon=config[\"taxon\"],\n",
+    "        species=config[\"species\"], \n",
+    "        annotation_release=config[\"annotation_release\"], \n",
+    "        dir_output=dir_output\n",
+    "    )\n",
+    "# If the Ensembl config file is generated\n",
+    "elif config[\"source\"] == \"ensembl\":\n",
+    "    region_generator = EnsemblGenomicRegionGenerator(\n",
+    "        species=config[\"species\"], \n",
+    "        annotation_release=config[\"annotation_release\"], \n",
+    "        dir_output=dir_output\n",
+    "    )\n",
     "\n",
-    "# generate the reference\n",
-    "reference_database = CustomReferenceDB(\n",
-    "    species=oligo_database.species,\n",
-    "    genome_assembly=oligo_database.genome_assembly,\n",
-    "    annotation_release=oligo_database.annotation_release,\n",
-    "    files_source=oligo_database.files_source,\n",
-    "    annotation_file=oligo_database.annotation_file,\n",
-    "    sequence_file=oligo_database.sequence_file,\n",
-    "    dir_output=dir_output\n",
-    ")\n",
-    "reference_database.create_reference_DB(block_size=config[\"block_size\"]) # leave the standard parameters\n",
-    "\n",
-    "# intialize the filter classes\n",
-    "exact_mathces = ExactMatches(dir_specificity=dir_specificity)\n",
-    "seed_ligation = LigationRegionCreation(ligation_region_size=config[\"ligation_region_size\"])\n",
-    "seed_region = BowtieSeedRegion(dir_specificity=dir_specificity, seed_region_creation=seed_ligation)\n",
-    "blastn = Blastn(\n",
-    "    dir_specificity=dir_specificity,\n",
-    "    word_size=config[\"word_size\"],\n",
-    "    percent_identity=config[\"percent_identity\"],\n",
-    "    coverage=config[\"coverage\"],\n",
-    ")\n",
-    "filters = [exact_mathces, seed_region, blastn]\n",
-    "\n",
-    "# initialize the specificity filter class\n",
-    "specificity_filter = SpecificityFilter(filters=filters, write_genes_with_insufficient_oligos=config[\"write_removed_genes\"])\n",
-    "# filte r the database\n",
-    "oligo_database = specificity_filter.apply(oligo_database=oligo_database, reference_database=reference_database, n_jobs=config[\"n_jobs\"])\n",
-    "# write the intermediate result\n",
-    "if config[\"write_intermediate_steps\"]:\n",
-    "    oligo_database.write_oligos_DB(format=config[\"file_format\"], dir_oligos_DB=\"specificity_filter\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "file_transcriptome = region_generator_custom.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"target_oligo\"][\"oligo_length_max\"])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "readout_probe_class = ReadoutProbes(config,\n",
+    "            dir_output,\n",
+    "            file_transcriptome,\n",
+    "            region_generator_custom)\n",
+    "readout_probes, file_= readout_probe_class.create_readouts(100)"
+   ]
   }
  ],
  "metadata": {
