--- a/tests/notebooks/test_merfish_target.ipynb
+++ b/tests/notebooks/test_merfish_target.ipynb
@@ -84,7 +84,7 @@
     "        dir_output=dir_output\n",
     "    )\n",
     "\n",
-    "file_transcriptome = region_generator_custom.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"oligo_length_max\"])"
+    "file_transcriptome = region_generator_custom.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"target_oligo\"][\"oligo_length_max\"])"
    ]
   },
   {
