--- a/tutorials/merfish_probe_designer.ipynb
+++ b/tutorials/merfish_probe_designer.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -73,9 +73,9 @@
     "#write bc20mers\n",
     "primer_oligo_config = config[\"primer_oligo\"]\n",
     "oligo_25nt_path = primer_oligo_config[\"file_bc25mer\"]\n",
-    "oligo_25nt_dict = {rec.id : rec.seq for rec in SeqIO.parse(oligo_25nt_path, \"fasta\")}\n",
+    "oligo_25nt_dict = {rec.id : rec.seq for rec in SeqIO.parse(\"./data/bc25mer/bc25mer.240k.fasta\", \"fasta\")}\n",
     "oligo_20nt_dict = {k: v[:-5] for k, v in oligo_25nt_dict.items()}\n",
-    "oligo_20nt_path = os.path.join(primer_oligo_config[\"oligo_output\"],\"bc20mer_oligo.fasta\")\n",
+    "oligo_20nt_path = os.path.join(\"./data/bc25mer\",\"bc20mer_oligo.fasta\")\n",
     "with open(oligo_20nt_path, \"w\") as handle:\n",
     "    for name, seq in oligo_20nt_dict.items():\n",
     "        handle.write(\">\" + name + \"\\n\")\n",
@@ -115,6 +115,27 @@
     "\n",
     "*Note: if you already have a stored database you can load it into an OligoDatabase object by using the ``load_oligo_database()`` function.*"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "20"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primer_oligo_config[\"oligo_length_min\"]\n",
+    "primer_oligo_config[\"oligo_length_max\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
