debug blastn os.remove path, mfix merfish primer design

--- a/tests/notebooks/test_merfish_functions.ipynb
+++ b/tests/notebooks/test_merfish_functions.ipynb
@@ -108,9 +108,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from scipy.spatial.distance import hamming\n",
+    "from numpy import random\n",
+    "\n",
+    "\n",
+    "def generate_codebook(num_seq: int, encoding_scheme: str):\n",
+    "    '''\n",
+    "    encoding_scheme: MHD2 or MHD4\n",
+    "    This function is using generator generate_binary_sequences() to return a list of encoding codes\n",
+    "\n",
+    "    Params:\n",
+    "    n_bit: Number of bits in a code\n",
+    "    n_one: Number of ones in a code\n",
+    "    n_seq: Number of codes in a list\n",
+    "    '''\n",
+    "\n",
+    "\n",
+    "    # Initialize the list of sequences\n",
+    "    sequences = []\n",
+    "\n",
+    "    if (encoding_scheme == \"MHD4\") & (num_seq <= 140):  # upper limit is 140\n",
+    "        num_ones = 4\n",
+    "        num_bits = 16\n",
+    "        hamming_distance = 4\n",
+    "        # Generate sequences until the desired number of sequences is reached\n",
+    "        while len(sequences) < num_seq:\n",
+    "            # Generate a new sequence with the desired number of 1s\n",
+    "            sequence = [1] * num_ones + [0] * (num_bits - num_ones)\n",
+    "            random.shuffle(sequence)\n",
+    "\n",
+    "            # Check if the new sequence meets the minimum distance requirement\n",
+    "            if all(hamming_distance >= hamming(sequence, seq) * num_bits for seq in sequences):\n",
+    "                # Add the new sequence to the list of sequences\n",
+    "                sequences.append(sequence)\n",
+    "\n",
+    "    elif (encoding_scheme == \"MHD2\") & (num_seq <= 1001): # upper limit is 1001\n",
+    "        num_ones = 4\n",
+    "        num_bits = 14\n",
+    "        min_hamming_distance = 2\n",
+    "        # Generate sequences until the desired number of sequences is reached\n",
+    "        while len(sequences) < num_seq:\n",
+    "            # Generate a new sequence with the desired number of 1s\n",
+    "            sequence = [1] * num_ones + [0] * (num_bits - num_ones)\n",
+    "            random.shuffle(sequence)\n",
+    "\n",
+    "            # Check if the new sequence meets the minimum distance requirement\n",
+    "            if all(min_hamming_distance <= hamming(sequence, seq) * num_bits for seq in sequences):\n",
+    "                # Add the new sequence to the list of sequences\n",
+    "                sequences.append(sequence)\n",
+    "    # Convert the list of sequences to a list of strings and return it\n",
+    "    return [\"\".join(str(bit) for bit in sequence) for sequence in sequences]\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['10000010000101',\n '11010100000000',\n '10001000010100',\n '11010001000000',\n '00010001001100',\n '00100000001101',\n '01000000001110',\n '10100100001000',\n '10001001000100',\n '00110010000001']"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_codebook(10,\"MHD2\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "8.0\n",
+      "8.0\n",
+      "4.0\n",
+      "6.0\n",
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.spatial.distance import hamming\n",
+    "\n",
+    "#define arrays\n",
+    "x = [0, 1, 1, 1, 0, 1]\n",
+    "y = [0, 0, 1, 1, 0, 0]\n",
+    "\n",
+    "#calculate Hamming distance between the two arrays\n",
+    "hamming(x, y) * len(x)\n",
+    "\n",
+    "\n",
+    "\n",
+    "seq1 = [0,0,0,0,1,1,1,0,0,0,0,0,0,0,1,0]\n",
+    "seq2 = [0,0,0,0,0,1,0,0,1,1,0,0,0,0,1,0]\n",
+    "seq3 = [0,1,0,0,0,0,0,0,1,1,0,0,0,1,0,0]\n",
+    "seq4 = [1,1,0,0,0,0,0,0,1,0,1,0,0,0,0,0]\n",
+    "print(hamming(seq1, seq2)*len(seq1))\n",
+    "print(hamming(seq1, seq3)*len(seq1))\n",
+    "print(hamming(seq1, seq4)*len(seq1))\n",
+    "print(hamming(seq2, seq3)*len(seq1))\n",
+    "print(hamming(seq2, seq4)*len(seq1))\n",
+    "print(hamming(seq3, seq4)*len(seq1))"
+   ],
    "metadata": {
     "collapsed": false
    }
