--- a/tests/notebooks/test_merfish_pimer.ipynb
+++ b/tests/notebooks/test_merfish_pimer.ipynb
@@ -44,15 +44,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "outputs": [
     {
@@ -80,10 +71,12 @@
     "# Create the transcriptome file\n",
     "# If the custom config file is selected\n",
     "print(\"Creating transcriptome\")\n",
+    "annotation_file = \"../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\" # required: GTF file with gene annotation\n",
+    "sequence_file = \"../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\" # required: FASTA file with genome sequence\n",
     "if config[\"source\"] == \"custom\":\n",
     "    region_generator = CustomGenomicRegionGenerator(\n",
-    "        annotation_file=config[\"annotation_file\"],\n",
-    "        sequence_file=config[\"sequence_file\"],\n",
+    "        annotation_file=annotation_file,\n",
+    "        sequence_file=sequence_file,\n",
     "        files_source=config[\"files_source\"],\n",
     "        species=config[\"species\"],\n",
     "        annotation_release=config[\"annotation_release\"],\n",
@@ -110,46 +103,6 @@
     "file_transcriptome = region_generator.generate_transcript_reduced_representation(\n",
     "    include_exon_junctions=True, exon_junction_size=2 * config[\"oligo_length_max\"])\n",
     "print(\"Done!\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tests/output_merfish/merfish_sequences/annotation/transcriptome_source_NCBI_species_human_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_60.fna'"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_transcriptome"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tests/notebooks'"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
    ],
    "metadata": {
     "collapsed": false
@@ -191,94 +144,6 @@
    ],
    "source": [
     "test_primer_probs = PrimerProbes(30,config_path, file_transcriptome,region_generator)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "write trimmed primer done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/oligo_designer_toolsuite/database/_reference_database.py:59: UserWarning: No files_source defined. Using default files_source custom!\n",
-      "  warnings.warn(\n",
-      "/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/oligo_designer_toolsuite/database/_reference_database.py:65: UserWarning: No species defined. Using default species unknown!\n",
-      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
-      "/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/oligo_designer_toolsuite/database/_reference_database.py:69: UserWarning: No annotation release defined. Using default release unknown!\n",
-      "  warnings.warn(\n",
-      "/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/oligo_designer_toolsuite/database/_reference_database.py:75: UserWarning: No genome assembly defined. Using default genome assembly unknown!\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from Bio import SeqIO\n",
-    "from oligo_designer_toolsuite.database import ReferenceDatabase, OligoDatabase\n",
-    "trimmed_primers = {}\n",
-    "primer_genes = list(test_primer_probs.oligo_database.database.keys())\n",
-    "primer_oligo_ids = [list(test_primer_probs.oligo_database.database[gene].keys())[0] for gene in primer_genes]\n",
-    "for gene, oligo_id in zip(primer_genes, primer_oligo_ids):\n",
-    "    # Get 3' end sequences\n",
-    "    trimmed_primers[gene] = str(test_primer_probs.oligo_database.database[gene][oligo_id][\"sequence\"][-test_primer_probs.config[\"primers_blast_setup\"]['blast2_word_size']:])\n",
-    "\n",
-    "# create reference DB with fasta file\n",
-    "fasta_reference_database2 = os.path.join(\"deleted_this.fna\")\n",
-    "\n",
-    "\n",
-    "with open(fasta_reference_database2, \"w\") as handle:\n",
-    "    for name, seq in trimmed_primers.items():\n",
-    "        handle.write(\">\" + name + \"\\n\")\n",
-    "        handle.write(str(seq) + \"\\n\")\n",
-    "    print(\"write trimmed primer done!\")\n",
-    "\n",
-    "reference_database2 = ReferenceDatabase(\n",
-    "    file_fasta=fasta_reference_database2)\n",
-    "reference_database2.load_fasta_into_database()\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CTAGA\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "'CTAGA'"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_primer_probs.oligo_database\n",
-    "gene = list(test_primer_probs.oligo_database.database.keys())[0]\n",
-    "oligo_id = list(test_primer_probs.oligo_database.database[gene].keys())[0]\n",
-    "\n",
-    "sample_oligos_DB = {}\n",
-    "sequence = str(test_primer_probs.oligo_database.database[gene][oligo_id][\"sequence\"][-5:])\n",
-    "print(sequence)\n",
-    "sequence"
    ],
    "metadata": {
     "collapsed": false
@@ -331,6 +196,26 @@
    ],
    "source": [
     "primer1,primer2,_ = test_primer_probs.create_primer()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(['CTGACGTGTGAGGCGCTAGA',\n  'GGTATGGCACGCCTAATCTG',\n  'GGTAACTGCGCATAGTTGGC',\n  'GCCACCTTAACACGCGATGA',\n  'GTGCCGCAGACATTGCATAC',\n  'GAGTCGAATATCCACCACCG',\n  'GTAACCTTAGCACGCCGGAG',\n  'GTGTGTCCTACCTACGCGAG',\n  'TTGTGTCGGCCACAGGTACG',\n  'GTGATTGTCGCCTTGACGAG',\n  'AACAAGTCCTGCTCGCATCG',\n  'CGGCAGGAGCACATGATAGC',\n  'ATGGCTTGGACGACTAACGC',\n  'GGCGATATAGGAGAGTCCGC',\n  'ATACCATTACCGGCCGACGA',\n  'GGCTATGTCCGTAACACTCC',\n  'GCACTCGCTCCTACCATCGA',\n  'CCATCATCCAACCGGCTTCG',\n  'GATATCCTCGGCGTCAAGCT',\n  'ATCGGTGACGGCGATTCTCA',\n  'TAGGCGTAAGGTCGGCTTAG',\n  'TAGGCACGCCTACTGGTAGG',\n  'CGATTCCAGAACCTGAGGCA',\n  'GTTAGCTCGTGCGTTATCGG',\n  'GTTGACTGAGACTACGCGCG',\n  'GACATGATTGCCGTTCCGCA',\n  'GACAGTCAGGTTGCATGTGG',\n  'TTCCGTGAGAGAGCATCACG',\n  'GTGTCTTATCGGCAAGCGCT',\n  'GTTAAGGATCGCCGAGCTAG'],\n ['TAATACGACTCACTATAGGCATGGAACGCATGTGTCAG',\n  'TAATACGACTCACTATAGGTCGTTCGTCGCAATGACTG',\n  'TAATACGACTCACTATAGAGGCACGCCAGTCTAATTCC',\n  'TAATACGACTCACTATAGACATTGCCTGCGCTGTATGG',\n  'TAATACGACTCACTATAGAGCGTCGACAGATGGCTACT',\n  'TAATACGACTCACTATAGGCTGAAGCTGTGGTCTCAAG',\n  'TAATACGACTCACTATAGACCAGGCTGCTAGGTACCAT',\n  'TAATACGACTCACTATAGAGGCTGGTGAAGAGGTCCGT',\n  'TAATACGACTCACTATAGCCTGTAACCGTTGTGTGCTC',\n  'TAATACGACTCACTATAGCTGTGCCTTGGTACCAAGCC',\n  'TAATACGACTCACTATAGACCGCCGGTGATGCAGTAGA',\n  'TAATACGACTCACTATAGGGATCGCAGCTCTAATCCAC',\n  'TAATACGACTCACTATAGTCTCCTCAACTAGTGCGTGC',\n  'TAATACGACTCACTATAGCAGACTGGTCAAGGCACTGC',\n  'TAATACGACTCACTATAGAGCGCAGACCTCGACCTATG',\n  'TAATACGACTCACTATAGAGCTTGGCTCCTCTGTGAGT',\n  'TAATACGACTCACTATAGACGACAGAGCAGGCGTGCTA',\n  'TAATACGACTCACTATAGGAGGATACGATCGAGCTGAG',\n  'TAATACGACTCACTATAGCAGTTAAGGCGTTGCCAGGA',\n  'TAATACGACTCACTATAGGCAAGCTCGCCGCTGATTAT',\n  'TAATACGACTCACTATAGCTACGTTGCTTGCAAGAGGC',\n  'TAATACGACTCACTATAGGATGCGCCGACATGTTGACT',\n  'TAATACGACTCACTATAGCCTACGGCATGATCATGCGG',\n  'TAATACGACTCACTATAGGGTCAGTCAGAGCAGTTCAG',\n  'TAATACGACTCACTATAGTGCGCGCTCCTGTGTAATGT',\n  'TAATACGACTCACTATAGGACGGCGCATCACATAACAG',\n  'TAATACGACTCACTATAGGTCCGCGATGTTGTCTTGGA',\n  'TAATACGACTCACTATAGGTCCAGAGACGGTCGATCAC',\n  'TAATACGACTCACTATAGGCTTAGTCTACGGAGTTGGC'])"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primer1,primer2"
    ],
    "metadata": {
     "collapsed": false
