--- a/tests/notebooks/test_merfish_readout.ipynb
+++ b/tests/notebooks/test_merfish_readout.ipynb
@@ -79,7 +79,7 @@
     "            dir_output,\n",
     "            file_transcriptome,\n",
     "            region_generator_custom)\n",
-    "readout_probes, file_= readout_probe_class.create_readouts(100)"
+    "readout_probes= readout_probe_class.create_readouts(100)"
    ]
   }
  ],
