add config in test

--- a/tests/notebooks/test_merfish_pimer.ipynb
+++ b/tests/notebooks/test_merfish_pimer.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tests/notebooks'"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -37,9 +28,10 @@
     "import yaml\n",
     "from Bio.SeqUtils import MeltingTemp as mt\n",
     "\n",
-    "config_path = \"/home/cw/PycharmProjects/oligo-designer-toolsuite_merfish/tutorials/configs/merfish_probe_designer_test.yaml\"\n",
+    "\n",
+    "\n",
     "from pathlib import Path\n",
-    "os.getcwd()"
+    "os.getcwd()\n"
    ]
   },
   {
@@ -60,7 +52,7 @@
     "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, \\\n",
     "    EnsemblGenomicRegionGenerator\n",
     "\n",
-    "config_file = config_path\n",
+    "config_file = \"../configs/merfish_probe_designer_test.yaml\"\n",
     "with open(config_file, 'r') as yaml_file:\n",
     "    config = yaml.safe_load(yaml_file)\n",
     "\n",
