--- a/tutorials/padlock_probe_designer.ipynb
+++ b/tutorials/padlock_probe_designer.ipynb
@@ -90,34 +90,30 @@
    "source": [
     "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, EnsemblGenomicRegionGenerator\n",
     "\n",
-    "# If the custom config file is selected\n",
-    "if config[\"source\"] == \"custom\":\n",
-    "    region_generator_custom = CustomGenomicRegionGenerator(\n",
-    "        annotation_file=config[\"file_annotation\"], \n",
-    "        sequence_file=config[\"file_sequence\"], \n",
-    "        files_source=config[\"files_source\"], \n",
-    "        species=config[\"species\"], \n",
-    "        annotation_release=config[\"annotation_release\"], \n",
-    "        genome_assembly=config[\"genome_assembly\"],\n",
-    "        dir_output=dir_output\n",
-    "    )\n",
-    "# If the Ncbi config file is selected\n",
-    "elif config[\"source\"] == \"ncbi\":\n",
-    "    region_generator = NcbiGenomicRegionGenerator(\n",
-    "        taxon=config[\"taxon\"],\n",
-    "        species=config[\"species\"], \n",
-    "        annotation_release=config[\"annotation_release\"], \n",
-    "        dir_output=dir_output\n",
-    "    )\n",
-    "# If the Ensembl config file is generated\n",
-    "elif config[\"source\"] == \"ensembl\":\n",
-    "    region_generator = EnsemblGenomicRegionGenerator(\n",
-    "        species=config[\"species\"], \n",
-    "        annotation_release=config[\"annotation_release\"], \n",
-    "        dir_output=dir_output\n",
-    "    )\n",
-    "\n",
-    "file_transcriptome = region_generator_custom.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"oligo_length_max\"])"
+    "region_generator = CustomGenomicRegionGenerator(\n",
+    "    annotation_file=config[\"file_annotation\"], \n",
+    "    sequence_file=config[\"file_sequence\"], \n",
+    "    files_source=config[\"source\"], \n",
+    "    species=config[\"species\"], \n",
+    "    annotation_release=config[\"annotation_release\"], \n",
+    "    genome_assembly=config[\"genome_assembly\"],\n",
+    "    dir_output=dir_output\n",
+    ")\n",
+    "# # If the Ncbi config file is selected\n",
+    "# region_generator = NcbiGenomicRegionGenerator(\n",
+    "#     taxon=config[\"taxon\"],\n",
+    "#     species=config[\"species\"], \n",
+    "#     annotation_release=config[\"annotation_release\"], \n",
+    "#     dir_output=dir_output\n",
+    "# )\n",
+    "# # If the Ensembl config file is generated\n",
+    "# region_generator = EnsemblGenomicRegionGenerator(\n",
+    "#     species=config[\"species\"], \n",
+    "#     annotation_release=config[\"annotation_release\"], \n",
+    "#     dir_output=dir_output\n",
+    "# )\n",
+    "file_transcriptome = region_generator.generate_transcript_reduced_representation(include_exon_junctions=True, exon_junction_size=2*config[\"oligo_length_max\"], n_jobs=config[\"n_jobs\"])\n",
+    "#file_transcriptome = \"/home/francesco/Desktop/Work/oligo-designer-toolsuite/tutorials/data/regions.fasta\""
    ]
   },
   {
@@ -161,30 +157,22 @@
     "# define the database class\n",
     "oligo_database = OligoDatabase(\n",
     "    file_fasta = file_transcriptome,\n",
-    "    oligo_length_min = config[\"oligo_length_min\"],\n",
-    "    oligo_length_max = config[\"oligo_length_max\"],\n",
     "    min_oligos_per_region = config[\"min_oligos_per_gene\"],\n",
-    "    files_source = region_generator_custom.files_source,\n",
-    "    species = region_generator_custom.species,\n",
-    "    annotation_release = region_generator_custom.annotation_release,\n",
-    "    genome_assembly = region_generator_custom.genome_assembly,\n",
+    "    files_source = region_generator.files_source,\n",
+    "    species = region_generator.species,\n",
+    "    annotation_release = region_generator.annotation_release,\n",
+    "    genome_assembly = region_generator.genome_assembly,\n",
     "    n_jobs = 2,\n",
     "    dir_output=dir_output\n",
     ")\n",
     "\n",
     "# read the genes file\n",
-    "if config[\"file_genes\"] is None:\n",
-    "    warnings.warn(\n",
-    "        \"No file containing the genes was provided, all the genes are ussed to generate the probes. This chioce can use a lot of resources.\"\n",
-    "    )\n",
-    "    genes = None\n",
-    "else:\n",
-    "    with open(config[\"file_genes\"]) as handle:\n",
-    "        lines = handle.readlines()\n",
-    "        genes = [line.rstrip() for line in lines]\n",
-    "        \n",
-    "# generate the oligo sequences from gene transcripts\n",
-    "oligo_database.create_database(region_ids=genes) \n",
+    "with open(config[\"file_genes\"]) as handle:\n",
+    "    lines = handle.readlines()\n",
+    "    genes = [line.rstrip() for line in lines]\n",
+    "    \n",
+    "#generate the oligo sequences from gene transcripts\n",
+    "oligo_database.create_database(oligo_length_min = config[\"oligo_length_min\"], oligo_length_max = config[\"oligo_length_max\"],region_ids = genes)\n",
     "\n",
     "# alternative: load database from file\n",
     "# oligo_database.load_oligo_database(file_database)"
@@ -341,26 +329,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "# reads processed: 2678\n",
-      "# reads with at least one alignment: 2678 (100.00%)\n",
+      "# reads processed: 94\n",
+      "# reads with at least one alignment: 94 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 87163 alignments\n",
-      "# reads processed: 136\n",
-      "# reads with at least one alignment: 136 (100.00%)\n",
+      "Reported 1653 alignments\n",
+      "# reads processed: 562\n",
+      "# reads with at least one alignment: 562 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 2873 alignments\n",
-      "# reads processed: 2117\n",
-      "# reads with at least one alignment: 2117 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 87883 alignments\n",
-      "# reads processed: 575\n",
-      "# reads with at least one alignment: 575 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 15202 alignments\n",
+      "Reported 9987 alignments\n",
       "# reads processed: 369\n",
       "# reads with at least one alignment: 369 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 21850 alignments\n"
+      "Reported 19096 alignments\n",
+      "# reads processed: 2002\n",
+      "# reads with at least one alignment: 2002 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 44697 alignments\n",
+      "# reads processed: 1862\n",
+      "# reads with at least one alignment: 1862 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 63137 alignments\n"
      ]
     }
    ],
@@ -379,10 +367,10 @@
     "\n",
     "reference = ReferenceDatabase(\n",
     "    file_fasta = file_transcriptome,\n",
-    "    files_source = region_generator_custom.files_source,\n",
-    "    species = region_generator_custom.species,\n",
-    "    annotation_release = region_generator_custom.annotation_release,\n",
-    "    genome_assembly = region_generator_custom.genome_assembly,\n",
+    "    files_source = region_generator.files_source,\n",
+    "    species = region_generator.species,\n",
+    "    annotation_release = region_generator.annotation_release,\n",
+    "    genome_assembly = region_generator.genome_assembly,\n",
     "    dir_output=dir_output\n",
     "    )\n",
     "\n",
@@ -514,7 +502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ODT",
+   "display_name": "oligo",
    "language": "python",
    "name": "python3"
   },
@@ -528,12 +516,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a7f4130ed83df3b8f06d6c345c87a414b57058a10ea01094325e8ae4cc394d7d"
+    "hash": "7ff94d65164c54a2126c7dc0869520902e3a005d5dddb9f8c3667ad0fd9373c9"
    }
   }
  },
