--- a/tests/notebooks/test_database.ipynb
+++ b/tests/notebooks/test_database.ipynb
@@ -20,8 +20,16 @@
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
-    "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, EnsemblGenomicRegionGenerator\n",
-    "from oligo_designer_toolsuite.utils import GffParser"
+    "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, EnsemblGenomicRegionGenerator, OligoDatabase\n",
+    "from oligo_designer_toolsuite.utils import GffParser\n",
+    "from oligo_designer_toolsuite.oligo_efficiency import (\n",
+    "    PadlockOligoScoring,\n",
+    "    PadlockSetScoring,\n",
+    ")\n",
+    "from oligo_designer_toolsuite.oligo_selection import (\n",
+    "    OligosetGenerator,\n",
+    "    padlock_heuristic_selection,\n",
+    ")"
    ]
   },
   {
@@ -34,19 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\n",
-      "../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\n",
-      "NCBI\n",
-      "Homo_sapiens\n",
-      "110\n",
-      "GRCh38\n"
+     "ename": "TypeError",
+     "evalue": "CustomGenomicRegionGenerator.__init__() got an unexpected keyword argument 'source'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m annotation_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m sequence_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m region_generator_ncbi \u001b[39m=\u001b[39m CustomGenomicRegionGenerator(annotation_file, sequence_file, source\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mNCBI\u001b[39;49m\u001b[39m\"\u001b[39;49m, species \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mHomo_sapiens\u001b[39;49m\u001b[39m\"\u001b[39;49m, annotation_release\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m110\u001b[39;49m\u001b[39m\"\u001b[39;49m, genome_assembly\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mGRCh38\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(region_generator_ncbi\u001b[39m.\u001b[39mannotation_file)\n\u001b[1;32m      5\u001b[0m \u001b[39mprint\u001b[39m(region_generator_ncbi\u001b[39m.\u001b[39msequence_file)\n",
+      "\u001b[0;31mTypeError\u001b[0m: CustomGenomicRegionGenerator.__init__() got an unexpected keyword argument 'source'"
      ]
     }
    ],
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
